# RL2018

./: .gitignore  README.md  notes.md  start.sh
.devcontainer/: Dockerfile  devcontainer.json
exercises/chapter2/: e2_11.ipynb
exercises/chapter2/.ipynb_checkpoints/: e2_11-checkpoint.ipynb
exercises/chapter3/: e4_7.ipynb  e4_7_rust.ipynb
exercises/chapter3/.ipynb_checkpoints/: e4_7-checkpoint.ipynb  e4_7_rust-checkpoint.ipynb
exercises/chapter3/e4_7/: Cargo.toml
exercises/chapter3/e4_7/src/: lib.rs
exercises/chapter4/: e4_7.ipynb  e4_7_rust.ipynb  e4_9_rust.ipynb
exercises/chapter4/.ipynb_checkpoints/: e4_7_rust-checkpoint.ipynb  e4_9_rust-checkpoint.ipynb
exercises/chapter4/e4_7/: Cargo.toml
exercises/chapter4/e4_7/src/: lib.rs
exercises/chapter4/e4_9/: Cargo.toml
exercises/chapter4/e4_9/src/: lib.rs
exercises/chapter5/: e5_12_rendered.html
exercises/chapter5/.ipynb_checkpoints/: e5_12_rust-checkpoint.ipynb
exercises/chapter5/e5_12/: Cargo.toml
exercises/chapter5/e5_12/src/: lib.rs
exercises/chapter5/e5_12_outputs/: complex_track_off-policy_train.txt  race_track_off-policy_train.txt
exercises/chapter6/: Untitled.ipynb
exercises/chapter6/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
exercises/chapter6/e6_9_10/: main.py
