[package]
name = "e4_7"
version = "0.1.0"
authors = ["levmckinney <levmckinney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.12.*"
rayon = "1.3.0"
itertools = "0.9.0"

[profile.release]
debug = true
