[package]
name = "e5_12"
version = "0.1.0"
authors = ["levmckinney <levmckinney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23.*"
rand="0.7.*"
clap = "2.33.0"
indicatif = "0.14.0"
indexmap = "1.3.2"
